# discord-presence-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: example.rs
src/: activities.rs  discord_connection.rs  error.rs  lib.rs
